# groonga

./: configure.ac
lib/: ctx.c  ctx_impl.h  db.c  expr.c  expr.h  ii.c  mrb.c  mrb.h  plugin.c  scaninfo.rb
lib/mrb/: mrb_expr.c
plugins/: CMakeLists.txt  Makefile.am
plugins/scaninfo_builders/: CMakeLists.txt  Makefile.am  mrb.c  mruby_sources.am
